--- a/.github/workflows/crm-frontend.yml
+++ b/.github/workflows/crm-frontend.yml
@@ -46,6 +46,10 @@ jobs:
             sudo npm install -g pm2
             pm2 -v  # Verify PM2 installation
 
+            if [ ! -d "frontend" ]; then
+              git clone https://github.com/Gappu12sh/frontend.git frontend
+            fi
+
             # Ensure you're in the correct directory
             cd frontend  # Adjust the path to your frontend directory
             git pull origin main  # Pull the latest changes from the repository
