--- a/.github/workflows/crm-frontend.yml
+++ b/.github/workflows/crm-frontend.yml
@@ -16,57 +16,45 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'  # Specify version 22.x LTS of Node.js
+          node-version: '22'
 
       - name: Set up SSH key
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Install dependencies
-        run: |
-          npm install
-          npm install --save-dev @babel/plugin-proposal-private-property-in-object
-
-      - name: Install Node.js 22.x LTS, npm, and PM2 on the server
+      - name: Deploy to EC2 server
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.SERVER_IP }} << 'EOF'
-            # Update the server package list
-            sudo apt update -y
+            set -e  # stop on error
 
-            # Install Node.js 22.x LTS from NodeSource repository
-            curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -
-            sudo apt install -y nodejs
+            # 1. Install Node.js v22 and PM2 if not installed
+            if ! command -v node || ! node -v | grep -q "v22"; then
+              curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -
+              sudo apt install -y nodejs
+              sudo npm install -g pm2
+            fi
 
-            # Verify the installation of Node.js 22.x LTS and npm
-            node -v
-            npm -v
+            # 2. Clone or pull frontend repo
+            cd /home/ubuntu
+            if [ ! -d "frontend" ]; then
+              git clone https://github.com/Gappu12sh/frontend.git
+            fi
 
-            # Install PM2 globally
-            sudo npm install -g pm2
-            pm2 -v  # Verify PM2 installation
+            cd frontend
+            git pull origin master
 
-          
-            git clone https://github.com/Gappu12sh/frontend.git frontend
-            
+            # 3. Set environment variable and build
+            export REACT_APP_BASE_URL=${REACT_APP_BASE_URL}
+            npm install
+            npm run build
 
-            # Ensure you're in the correct directory
-            cd frontend  # Adjust the path to your frontend directory
-            git pull origin main  # Pull the latest changes from the repository
-            npm install  # Install any missing dependencies
-            npm run build  # Build the React project
-            pm2 restart frontend  # Restart PM2 to serve the latest build
+            # 4. Restart or start PM2
+            if pm2 list | grep -q "frontend"; then
+              pm2 restart frontend
+            else
+              pm2 serve build 3000 --name frontend
+            fi
           EOF
-
-      - name: Build the project (locally)
         env:
           REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL_crm }}
-        run: |
-          CI='' npm run build
-
-      - name: Configure AWS credentials (if applicable)
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
